--- a/styles/main.css
+++ b/styles/main.css
@@ -116,6 +116,7 @@ h1 {
 
 .front-face, .back-face {
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     position: absolute;
     top: 0;
     left: 0;
